--- a/hw02.04.2023.ipynb
+++ b/hw02.04.2023.ipynb
@@ -18,7 +18,8 @@
    },
    "outputs": [],
    "source": [
-    "p = ['Я', ' ', 'л', 'у', 'б', 'и', 'л', 'ю', ' ', 'у', 'ч', 'е', 'т', 'с', 'я', ' ', 'ы', ' ', 'д', 'и', 'л', 'а', 'т', ' ', 'д', 'а', 'м', 'а', 'ш', 'н', 'е', ' ', 'з', 'о', 'д', 'а', 'н', 'е', 'е'].\n"
+    "p = ['Я', ' ', 'л', 'у', 'б', 'и', 'л', 'ю', ' ', 'у', 'ч', 'е', 'т', 'с', 'я', ' ', 'ы', ' ', 'д', 'и', 'л', 'а', 'т', ' ', 'д', 'а', 'м', 'а', 'ш', 'н', 'е', ' ', 'з', 'о', 'д', 'а', 'н', 'е', 'е'].\n",
+    "p.remove()"
    ]
   },
   {
